<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:background="@color/light_blue">

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/alike_angular"
            android:text="@string/kilogram_to_meters"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"/>

        <EditText
            android:id="@+id/edit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text3"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/number_in_kilometer"
            android:textColorHint="@color/white"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/submit2"
            android:layout_marginTop="@dimen/_50sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:layout_marginHorizontal="40dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit3"
            android:id="@+id/submit2"
            android:text="@string/kilometer_to_meters"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>


    </RelativeLayout>
</ScrollView>